test/errors/error25.base
Invalid array declaration
fun foo() {
  val (y)[2];
         ^
